# Adv_Django_test

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yaml
sparta/: asgi.py  settings.py  urls.py  wsgi.py
sparta/tests/: test_view.py
tabom/: apps.py
tabom/migrations/: 0001_initial.py
tabom/models/: __init__.py  article.py  like.py  user.py
